WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
22223
REGRESSION(
r38245
): "View Source" crashes the browser
https://bugs.webkit.org/show_bug.cgi?id=22223
Summary
REGRESSION(r38245): "View Source" crashes the browser
Thomas Sutton
Reported
2008-11-12 16:57:24 PST
The latest nightly WebKit build downloaded as WebKit-SVN-
r38297
.dmg crashes whenever I use the View Source function, whether by menu or shortcut. This happens on multiple sites (including twitter.com and gardnermuseum.org). Steps to reproduce on my PPC iMac with 10.4.11: 1) Open WebKit.app 2) Browse to a web page (it appears that any will do) 3) View Source through the menu bar or alt-cmd-u. 4) The browser crashes.
Attachments
Report of the view source crash
(23.54 KB, text/plain)
2008-11-12 16:58 PST
,
Thomas Sutton
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Thomas Sutton
Comment 1
2008-11-12 16:58:18 PST
Created
attachment 25108
[details]
Report of the view source crash
Mark Rowe (bdash)
Comment 2
2008-11-12 17:48:47 PST
<
rdar://problem/6366864
>
Darin Adler
Comment 3
2008-11-12 18:01:39 PST
I can't reproduce this but it's clear it's trivial to fix. Just need to null-check _private in viewDidMoveToWindow.
Darin Adler
Comment 4
2008-11-12 18:05:19 PST
http://trac.webkit.org/changeset/38355
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug