2008-11-12  Darin Adler  <darin@apple.com>

Reviewed by Mark Rowe.

        - fix https://bugs.webkit.org/show_bug.cgi?id=22223
          <rdar://problem/6366864> REGRESSION(r38245): "View Source" crashes the browser

        * WebView/WebFrameView.mm: (-[WebFrameView viewDidMoveToWindow]):
        Add missing null check.



Canonical link: https://commits.webkit.org/30572@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@38355 268f45cc-cd09-0410-ab3c-d52691b4dbfc